responsive layout & detailing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <!-- Formular -->
         <form id="todo-form">
             <input type="text" id="task-input" placeholder="Hvad skal gøres?" required>
-
+            <input type="number" id="antal-input" min="1" value="1" placeholder="Antal">
             <button type="submit">Tilføj</button>
         </form>
 
